added text to the button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./main.js" defer></script>
 </head>
 <body>
-    <button onclick="subscribe()"></button>
+    <button onclick="subscribe()">press me for something cool</button>
 
     
 </body>
